--- a/views/header.jade
+++ b/views/header.jade
@@ -9,6 +9,8 @@ head
     link(href='/bower_dependencies/bootstrapValidator/dist/css/bootstrapValidator.css', rel='stylesheet')
     link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
+    link(rel="stylesheet" href="/bower_dependencies/76d-social-icons/assets/css/social-icons.css")
+    link(rel="stylesheet" href="/bower_dependencies/76d-social-icons/assets/css/main.css")
 
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
