New layout for user profile

--- a/views/dashboard/userProfile.jade
+++ b/views/dashboard/userProfile.jade
@@ -164,6 +164,47 @@ title SNT-#{formatName(user.first_name, user.last_name)} | Profile
                                                             input.btn.btn-primary(type='submit', value='Save')
                     .col-md-8
                         .row
+                            div.card
+                                div.item
+                                    div.row
+                                        h5.col-xs-8 Policy Training
+                                        div.header-link.col-xs-4
+                                            a.btn.btn-primary(href='profile_editexpertise.html')
+                                                i.icon-pencil
+                                    div.session-and-ratings
+                                        div.badge.badge-session.session-info
+                                            h2 Session
+                                            h1 45 mins.
+                                        div.user-ratings
+                                            h2 User Ratings
+                                            ul
+                                                li
+                                                    i.icon-star.icon-highlighted
+                                                li
+                                                    i.icon-star.icon-highlighted
+                                                li
+                                                    i.icon-star.icon-highlighted
+                                                li
+                                                    i.icon-star
+                                                li
+                                                    i.icon-star
+                                        div.clearer
+                                    div.image-and-video
+                                        div.video-container
+                                        div.shadow
+                                    div.meta.meta-keywords
+                                        h5 Skills/Keywords
+                                        ul
+                                            li Social Policy
+                                            li Consulting
+                                            li Learning
+                                    div.summary-and-description
+                                        p
+                                            | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultricies eget nibh ac sollicitudin. Donec at nunc aliquet felis molestie tincidunt. Duis volutpat, quam sit amet fringilla convallis, sapien mi elementum justo, vel aliquam ligula tellus ac turpis. Vivamus et tincidunt diam. Nullam tristique justo vitae metus scelerisque, eu imperdiet lacus rhoncus.
+                                    div.meta.meta-keywords
+                                        h5 Experience
+                                        h1 5 yrs.
+                        .row
                             .content.col-md-6
                                 .card#educationDetails
                                     .header
