Settings page with phone and password change option

--- a/views/dashboard/userSchedule.jade
+++ b/views/dashboard/userSchedule.jade
@@ -1,29 +1,5 @@
 include ../header
-.navigation
-    .container
-        .masthead-nav
-            nav.navbar.navbar-default(role='navigation')
-                .container-fluid
-                    // Brand and toggle get grouped for better mobile display
-                    .navbar-header
-                        button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-collapse')
-                            span.sr-only Toggle navigation
-                            span.icon-bar
-                            span.icon-bar
-                            span.icon-bar
-                        .visible-xs.navbar-brand Dashboard
-                    // Collect the nav links, forms, and other content for toggling
-                    #navbar-collapse.collapse.navbar-collapse
-                        ul.nav.navbar-nav.navbar-left
-                            li
-                                a(href=DashboardUrls.dashboard()) Dashboard
-                        ul.nav.navbar-nav.navbar-right
-                            li
-                                a(href=DashboardUrls.integration()) Networks
-                            li.active
-                                a(href=DashboardUrls.userProfile(loggedInUser.id)) Profile
-                            li
-                                a(href='/payments') Payments
+include dashboardHeader
 div.matter
     div.container
         div.row
