--- a/views/dashboard/integration.jade
+++ b/views/dashboard/integration.jade
@@ -1,30 +1,6 @@
 include ../header
+include dashboardHeader
 title SearchNTalk - DashBoard
-.navigation
-    .container
-        .masthead-nav
-            nav.navbar.navbar-default(role='navigation')
-                .container-fluid
-                    // Brand and toggle get grouped for better mobile display
-                    .navbar-header
-                        button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-collapse')
-                            span.sr-only Toggle navigation
-                            span.icon-bar
-                            span.icon-bar
-                            span.icon-bar
-                        .visible-xs.navbar-brand Dashboard
-                    // Collect the nav links, forms, and other content for toggling
-                    #navbar-collapse.collapse.navbar-collapse
-                        ul.nav.navbar-nav.navbar-left
-                            li
-                                a(href=DashboardUrls.dashboard()) Dashboard
-                        ul.nav.navbar-nav.navbar-right
-                            li.active
-                                a(href='') Networks
-                            li
-                                a(href=DashboardUrls.userProfile(loggedInUser.id)) Profile
-                            li
-                                a(href='/payments') Payments
 .matter
     .container
         .row
