--- a/views/dashboard/memberProfile.jade
+++ b/views/dashboard/memberProfile.jade
@@ -1,30 +1,6 @@
 include ../header
+include dashboardHeader
 title SNT-#{formatName(user.first_name, user.last_name)} | Profile
-.navigation
-    .container
-        .masthead-nav
-            nav.navbar.navbar-default(role='navigation')
-                .container-fluid
-                    // Brand and toggle get grouped for better mobile display
-                    .navbar-header
-                        button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-collapse')
-                            span.sr-only Toggle navigation
-                            span.icon-bar
-                            span.icon-bar
-                            span.icon-bar
-                        .visible-xs.navbar-brand Dashboard
-                    // Collect the nav links, forms, and other content for toggling
-                    #navbar-collapse.collapse.navbar-collapse
-                        ul.nav.navbar-nav.navbar-left
-                            li
-                                a(href=DashboardUrls.dashboard()) Dashboard
-                        ul.nav.navbar-nav.navbar-right
-                            li
-                                a(href=DashboardUrls.integration()) Networks
-                            li.active
-                                a(href=DashboardUrls.userProfile(loggedInUser.id)) Profile
-                            li
-                                a(href='/payments') Payments
 .matter
     .container
         .row
@@ -350,7 +326,7 @@ if isEditable
         var userProfile = JSON.parse ( '!{JSON.stringify(userProfile)}' );
         var userEducation = JSON.parse( '!{JSON.stringify(escapeObject(userEducation))}' );
         var userEmployment = JSON.parse( '!{JSON.stringify(escapeObject(userEmployment))}' );
-        var unEscapeObject = !{unEscapeObject};
+    var unEscapeObject = !{unEscapeObject};
     script(src='/js/app/dashboard/memberProfile.js')
     script(src='/js/app/dashboard/memberEducation.js')
     script(src='/js/app/dashboard/memberEmployment.js')
