Few Fixes in expert Registration

--- a/views/memberRegistration/register.jade
+++ b/views/memberRegistration/register.jade
@@ -26,22 +26,22 @@ include ../header
                             form#registration-form(method='POST')
                                 .form-group
                                     label(for='email') Email
-                                    input.form-control#email(name='email', type='email', data-toggle="tooltip", data-placement="bottom", value=member.user.email, autocomplete='off')
+                                    input.form-control(name='email', type='email', data-toggle="tooltip", data-placement="bottom", value=member.user.email, autocomplete='off')
                                 .form-group
                                     label(for='first_name') First Name
-                                    input.form-control#first_name(name='first_name', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.first_name, autocomplete='off')
+                                    input.form-control(name='first_name', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.first_name, autocomplete='off')
                                 .form-group
                                     label(for='last_name') Last Name
-                                    input.form-control#last_name(name='last_name', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.last_name, autocomplete='off')
+                                    input.form-control(name='last_name', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.last_name, autocomplete='off')
                                 .form-group
                                     label(for='password') Password
-                                    input.form-control#password(type='password', name='password', data-toggle="tooltip", data-placement="bottom", autocomplete='off')
+                                    input.form-control(type='password', name='password', data-toggle="tooltip", data-placement="bottom", autocomplete='off')
                                 .form-group
                                     label(for='confirm_password') Confirm Password
-                                    input.form-control#confirm_password(type='password', name='confirm_password', data-toggle="tooltip", data-placement="bottom", autocomplete='off')
+                                    input.form-control(type='password', name='confirm_password', data-toggle="tooltip", data-placement="bottom", autocomplete='off')
                                 .form-group
                                     label(for='timezone') Timezone
-                                    select#timezone
+                                    select.form-control(name='timezone')
                                         each zone in Timezone
                                             option(value="#{zone.zone_id}") (#{formatTimezone(zone.gmt_offset)}) #{zone.zone_name}
                                 .form-group
